--- a/Modern Python Environments/sample-project/pyproject.toml
+++ b/Modern Python Environments/sample-project/pyproject.toml
@@ -6,9 +6,11 @@ authors = ["Daniel Cruz <adm.dcf@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+Flask = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+black = "^21.5b1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
